baseline/main/perl-extutils-cchecker/perl-extutils-cchecker-0.12-r1.log
>>> perl-extutils-cchecker: Validating /home/packager/oily-pine/main/perl-extutils-cchecker/APKBUILD...
>>> perl-extutils-cchecker: Cleaning up srcdir
>>> perl-extutils-cchecker: Cleaning up pkgdir
>>> perl-extutils-cchecker: Cleaning up tmpdir
>>> perl-extutils-cchecker: Fetching https://cpan.metacpan.org/authors/id/P/PE/PEVANS/ExtUtils-CChecker-0.12.tar.gz
  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current
                                 Dload  Upload   Total   Spent    Left  Speed
  0     0    0     0    0     0      0      0 --:--:-- --:--:-- --:--:--     0100 21019  100 21019    0     0  86267      0 --:--:-- --:--:-- --:--:-- 86497
>>> perl-extutils-cchecker: Fetching https://cpan.metacpan.org/authors/id/P/PE/PEVANS/ExtUtils-CChecker-0.12.tar.gz
>>> perl-extutils-cchecker: Checking sha512sums...
ExtUtils-CChecker-0.12.tar.gz: OK
>>> perl-extutils-cchecker: Preparing build chroot...
fetch http://dl-cdn.alpinelinux.org/alpine/edge/main/x86_64/APKINDEX.tar.gz
(1/75) Installing musl (1.2.5-r10)
(2/75) Installing libcrypto3 (3.5.0-r0)
(3/75) Installing ca-certificates-bundle (20241121-r2)
(4/75) Installing libssl3 (3.5.0-r0)
(5/75) Installing zlib (1.3.1-r2)
(6/75) Installing libapk2 (2.14.9-r2)
(7/75) Installing apk-tools (2.14.9-r2)
(8/75) Installing libcap2 (2.76-r0)
(9/75) Installing libcap-getcap (2.76-r0)
(10/75) Installing fakeroot (1.37.1.1-r0)
(11/75) Installing scanelf (1.3.8-r1)
(12/75) Installing musl-utils (1.2.5-r10)
(13/75) Installing libgcc (14.3.0-r0)
(14/75) Installing libstdc++ (14.3.0-r0)
(15/75) Installing lzip (1.25-r0)
(16/75) Installing openssl (3.5.0-r0)
(17/75) Installing patch (2.8-r0)
(18/75) Installing pkgconf (2.4.3-r0)
(19/75) Installing acl-libs (2.3.2-r1)
(20/75) Installing tar (1.35-r3)
(21/75) Installing busybox (1.37.0-r18)
Executing busybox-1.37.0-r18.post-install
(22/75) Installing ssl_client (1.37.0-r18)
(23/75) Installing busybox-binsh (1.37.0-r18)
(24/75) Installing abuild (3.15.0-r0)
Executing abuild-3.15.0-r0.pre-install
(25/75) Installing abuild-sudo (3.15.0-r0)
(26/75) Installing alpine-baselayout-data (3.7.0-r0)
(27/75) Installing alpine-baselayout (3.7.0-r0)
Executing alpine-baselayout-3.7.0-r0.pre-install
Executing alpine-baselayout-3.7.0-r0.post-install
(28/75) Installing bridge (1.5-r5)
(29/75) Installing ifupdown-ng (0.12.1-r7)
(30/75) Installing openrc-user (0.62.2-r2)
(31/75) Installing openrc (0.62.2-r2)
Executing openrc-0.62.2-r2.post-install
(32/75) Installing mdev-conf (4.8-r0)
(33/75) Installing busybox-mdev-openrc (1.37.0-r18)
(34/75) Installing alpine-conf (3.20.0-r0)
(35/75) Installing alpine-keys (2.5-r0)
(36/75) Installing alpine-release (3.22.0-r0)
(37/75) Installing busybox-openrc (1.37.0-r18)
(38/75) Installing busybox-suid (1.37.0-r18)
(39/75) Installing alpine-base (3.22.0-r0)
(40/75) Installing jansson (2.14.1-r0)
(41/75) Installing zstd-libs (1.5.7-r0)
(42/75) Installing binutils (2.44-r0)
(43/75) Installing libmagic (5.46-r2)
(44/75) Installing file (5.46-r2)
(45/75) Installing libgomp (14.3.0-r0)
(46/75) Installing libatomic (14.3.0-r0)
(47/75) Installing gmp (6.3.0-r3)
(48/75) Installing isl26 (0.26-r1)
(49/75) Installing mpfr4 (4.2.1_p1-r0)
(50/75) Installing mpc1 (1.3.1-r1)
(51/75) Installing gcc (14.3.0-r0)
(52/75) Installing libstdc++-dev (14.3.0-r0)
(53/75) Installing musl-dev (1.2.5-r10)
(54/75) Installing g++ (14.3.0-r0)
(55/75) Installing make (4.4.1-r3)
(56/75) Installing fortify-headers (1.1-r5)
(57/75) Installing build-base (0.5-r3)
(58/75) Installing brotli-libs (1.1.0-r2)
(59/75) Installing c-ares (1.34.5-r0)
(60/75) Installing libunistring (1.3-r0)
(61/75) Installing libidn2 (2.3.7-r0)
(62/75) Installing nghttp2-libs (1.65.0-r0)
(63/75) Installing libpsl (0.21.5-r3)
(64/75) Installing libcurl (8.14.0-r2)
(65/75) Installing libexpat (2.7.1-r0)
(66/75) Installing pcre2 (10.43-r1)
(67/75) Installing git (2.49.0-r0)
(68/75) Installing git-init-template (2.49.0-r0)
(69/75) Installing libbz2 (1.0.8-r6)
(70/75) Installing perl (5.40.2-r0)
(71/75) Installing perl-error (0.17030-r0)
(72/75) Installing perl-git (2.49.0-r0)
(73/75) Installing git-perl (2.49.0-r0)
(74/75) Installing perl-module-build (0.4234-r1)
(75/75) Installing perl-test-simple (1.302209-r0)
Executing busybox-1.37.0-r18.trigger
OK: 298 MiB in 75 packages
>>> perl-extutils-cchecker: Fetching https://cpan.metacpan.org/authors/id/P/PE/PEVANS/ExtUtils-CChecker-0.12.tar.gz
>>> perl-extutils-cchecker: Checking sha512sums...
ExtUtils-CChecker-0.12.tar.gz: OK
>>> perl-extutils-cchecker: Unpacking /var/cache/distfiles/ExtUtils-CChecker-0.12.tar.gz...
Created MYMETA.yml and MYMETA.json
Creating new 'Build' script for 'ExtUtils-CChecker' version '0.12'
Building ExtUtils-CChecker
t/00use.t ........... ok
test-57-1.c:1:9: error: expected '=', ',', ';', 'asm' or '__attribute__' before 'bar'
    1 | int foo bar splot
      |         ^~~
test-57-1.c:1:9: error: unknown type name 'bar'
t/01run.t ........... ok
test-82-1.c:1:9: error: expected '=', ',', ';', 'asm' or '__attribute__' before 'bar'
    1 | int foo bar splot
      |         ^~~
test-82-1.c:1:9: error: unknown type name 'bar'
t/02assert.t ........ ok
t/03accessors.t ..... ok
t/04module_build.t .. ok
t/05defines_to.t .... ok
t/10find_cflags.t ... skipped: This test requires gcc
t/99pod.t ........... skipped: Test::Pod 1.00 required for testing POD
All tests successful.
Files=8, Tests=28,  1 wallclock secs ( 0.02 usr  0.01 sys +  0.78 cusr  0.17 csys =  0.98 CPU)
Result: PASS
>>> perl-extutils-cchecker: Entering fakeroot...
Building ExtUtils-CChecker
Installing /tmp/pkg/perl-extutils-cchecker/usr/share/perl5/vendor_perl/ExtUtils/CChecker.pm
Installing /tmp/pkg/perl-extutils-cchecker/usr/share/man/man3/ExtUtils::CChecker.3pm
>>> perl-extutils-cchecker-doc*: Running split function doc...
'usr/share/man' -> '/tmp/pkg/perl-extutils-cchecker-doc/usr/share/man'
>>> perl-extutils-cchecker-doc*: Preparing subpackage perl-extutils-cchecker-doc...
>>> perl-extutils-cchecker-doc*: Running postcheck for perl-extutils-cchecker-doc
>>> perl-extutils-cchecker*: Running postcheck for perl-extutils-cchecker
>>> perl-extutils-cchecker*: Preparing package perl-extutils-cchecker...
>>> perl-extutils-cchecker-doc*: Tracing dependencies...
>>> perl-extutils-cchecker-doc*: Package size: 5.1 KB
>>> perl-extutils-cchecker-doc*: Compressing data...
>>> perl-extutils-cchecker-doc*: Create checksum...
>>> perl-extutils-cchecker-doc*: Create perl-extutils-cchecker-doc-0.12-r1.apk
>>> perl-extutils-cchecker*: Tracing dependencies...
	perl
>>> perl-extutils-cchecker*: Package size: 18.9 KB
>>> perl-extutils-cchecker*: Compressing data...
>>> perl-extutils-cchecker*: Create checksum...
>>> perl-extutils-cchecker*: Create perl-extutils-cchecker-0.12-r1.apk
>>> perl-extutils-cchecker: Updating the main/x86_64 repository index...
>>> perl-extutils-cchecker: Signing the index...
>>> perl-extutils-cchecker: Cleaning up srcdir
>>> perl-extutils-cchecker: Cleaning up build chroot
>>> perl-extutils-cchecker: Cleaning up pkgdir
